добавление школы и класса у ученика
